--- a/index.html
+++ b/index.html
@@ -517,14 +517,14 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk">Mathematics Tutoring</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk">Maths</a></h4>
             <p>One to one tutoring from £35 an hour. Any age from KS1 - A Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk">Computer Science Tutoring</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk">Computer Science</a></h4>
             <p>One to one tutoring from £35 an hour. Any age from GCSE - University Level</p>
           </div>
         </div>
