--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         <h2>Tutoring</h2>
         <p>Tutoring</p>
       </div>
-      <p> am an experienced and committed tutor of Maths, Computer Science and Programming. I teach all the way from 11+ and 13+ entrance exams to prep and secondary schools to A Level and even University level (in the case of Computer Science and Programming).</p>
+      <p> am an experienced and committed tutor of Maths, Computer Science and Programming. I teach all the way from 11+ and 13+ entrance exams to prep and secondary schools to A Level and even Degree Level (in the case of Computer Science and Programming).</p>
       <p>In terms of programming languages I have degree level knowledge in Python, Java, C#, C, Haskell and SQL. Maths and Computer Science tutoring starts from £35 per hour with Programming starting from £40 per hour</p>
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
@@ -525,28 +525,28 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk">Computer Science</a></h4>
-            <p>One to one tutoring from £35 an hour. Any age from GCSE - University Level</p>
+            <p>One to one tutoring from £35 an hour. Any age from GCSE - Degree Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk">Python Programing</a></h4>
-            <p>One to one tutoring from £40 an hour. Any age from GCSE - University Level</p>
+            <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <h4><a href="">Java Programing</a></h4>
-            <p>One to one tutoring from £40 an hour. Any age from GCSE - University Level</p>
+            <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk">Functional Programming</a></h4>
-            <p>ne to one tutoring from £40 an hour. Any age from A Level - University Level</p>
+            <p>ne to one tutoring from £40 an hour. Any age from A Level - Degree Level</p>
           </div>
         </div>
 
