changes to the about content £ £

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>University of Warwick</h3>
           <p>
-            I am a current undergraduate at the University of Warwick studying Computer Science and incoming Graduate Software Development Engineer at Amazon. My interests include functional programming, cyber security, web development and artificial intelligence. I am also an experienced tutor with a demonstrated history of working in the e-learning industry. I am a skilled programmer in Haskell, Python, Java, C, C# and SQL with experience in software engineering, database design, low and high level programming, network design and penetration testing. Please see my github for personal projects.
+            I am a current undergraduate at the University of Warwick studying Computer Science. My academic interests include functional programming, cyber security, web development and artificial intelligence. I am also an experienced tutor with a demonstrated history of working in the e-learning industry. I am a skilled programmer in Haskell, Python, Java, C, C# and SQL with experience in software engineering, database design, low and high level programming, network design and penetration testing. Please see my github for personal projects.
           </p>
           <p>
             My dissertation is entitled "Hale: a web based tool to teach functional programming". The project is to design a back-end compiler and front-end teaching tool to teach 'Hale'. Hale is a custom purely functional, statically typed, programming language I have developed. it is most similar to Lambda Calculus but with the inclusion of primitives and types. My supervisor is Jonathon Foss.</p>
