--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         <h2>Tutoring</h2>
         <p>Tutoring</p>
       </div>
-      <p> am an experienced and committed tutor of Maths, Computer Science and Programming. I teach all the way from 11+ and 13+ entrance exams to prep and secondary schools to A Level and even Degree Level (in the case of Computer Science and Programming).</p>
+      <p>I am an experienced and committed tutor of Maths, Computer Science and Programming. I teach all the way from 11+ and 13+ entrance exams to prep and secondary schools to A Level and even Degree Level (in the case of Computer Science and Programming).</p>
       <p>In terms of programming languages I have degree level knowledge in Python, Java, C#, C, Haskell and SQL. Maths and Computer Science tutoring starts from £35 per hour with Programming starting from £40 per hour</p>
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
