--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h1><a href="index.html">Joe Moore</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       
-      <h2>Software Engineer at <a href="https://www.amazon.co.uk/">Amazon</a></h2>
+      <h2>Software Engineer at <a href="https://www.amazon.co.uk/" target=_blank>Amazon</a></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -59,7 +59,7 @@
         <a href="https://twitter.com/Joe_Moore_101" class="twitter" target=_blank><i class="bi bi-twitter"></i></a>
         <a href="https://github.com/joverandout" class="github" target=_blank><i class="bi bi-github"></i></a>
         <a href="mailto:joe.moore@warwick.ac.uk" class="email" target=_blank><i class="bi bi-envelope"></i></a>
-        <a href="assets/Joe Moore CV.pdf" class="cv"><i class="bi bi-file-text" target=_blank></i></a>
+        <a href="assets/Joe Moore CV.pdf" class="cv" target=_blank><i class="bi bi-file-text"></i></a>
         <a href="https://www.linkedin.com/in/joe-moore-2b79b01ba/" class="linkedin" target=_blank><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -546,7 +546,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk">Functional Programming</a></h4>
-            <p>ne to one tutoring from £40 an hour. Any age from A Level - Degree Level</p>
+            <p>One to one tutoring from £40 an hour. Any age from A Level - Degree Level</p>
           </div>
         </div>
 
