2 blank targets missing

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div class="col-lg-6">
           <h3 class="CV-title">Experience</h3>
           <div class="CV-item">
-            <h4>Software Engineering Project for <a href="https://www.db.com/index?language_id=1&kid=sl.redirect-en.shortcut"> Deutsche Bank</a></h4>
+            <h4>Software Engineering Project for <a href="https://www.db.com/index?language_id=1&kid=sl.redirect-en.shortcut" target=_blank> Deutsche Bank</a></h4>
             <h5>Spring 2021</h5>
             <p><em>Coventry</em></p>
             <p>
@@ -449,7 +449,7 @@
                 rich” product, which included offensive language filtering and typo correction,
                 as well as our 21-emotion model into which we filtered comments. They also
                 commended us for our inclusivity with consideration of disabled and
-                colour-blind users. Received a prize from <a href="https://www.db.com/index?language_id=1&kid=sl.redirect-en.shortcut"> Deutsche Bank</a> for the product.</li>
+                colour-blind users. Received a prize from <a href="https://www.db.com/index?language_id=1&kid=sl.redirect-en.shortcut" target=_blank></a>> Deutsche Bank</a> for the product.</li>
             </ul>
             </p>
           </div>
