added an edited CV that doesn't include address or phone number

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="https://twitter.com/Joe_Moore_101" class="twitter" target=_blank><i class="bi bi-twitter"></i></a>
         <a href="https://github.com/joverandout" class="github" target=_blank><i class="bi bi-github"></i></a>
         <a href="mailto:joe.moore@warwick.ac.uk" class="email" target=_blank><i class="bi bi-envelope"></i></a>
-        <a href="assets/Joe Moore CV.pdf" class="cv" target=_blank><i class="bi bi-file-text"></i></a>
+        <a href="assets/Joe Moore CV (no number or address).pdf" class="cv" target=_blank><i class="bi bi-file-text"></i></a>
         <a href="https://www.linkedin.com/in/joe-moore-2b79b01ba/" class="linkedin" target=_blank><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -91,7 +91,8 @@
           </p>
           <p>
             My dissertation is entitled "Hale: a web based tool to teach functional programming". The project is to design a back-end compiler and front-end teaching tool to teach 'Hale'. Hale is a custom purely functional, statically typed, programming language I have developed. it is most similar to Lambda Calculus but with the inclusion of primitives and types. My supervisor is Jonathon Foss.</p>
-          <h3>Graduate Software Development Engineer at Amazon</h3>
+          <p>Please see my <a href="https://github.com/joverandout" class="linkedin" target=_blank>GitHub</a> for my personal projects.</p>          
+            <h3>Graduate Software Development Engineer at Amazon</h3>
           <p>In December 2021, I was very excited to accept a position as a Graduate Software Development Engineer at <a href="https://www.amazon.co.uk/" target=_blank>Amazon</a>. I will be based in London, working on a wide range of products and systems. I start work in September 2022.</p>
           <h3>Other</h3>
           </p>Outside of my degree I enjoy enjoy music, cycling, and cooking. Alongside these I am a keen Ultimate Frisbee player and have been a member of <a href="http://warwickultimate.co.uk/" target=_blank>Warwick Bears</a> since 2019. In that time I have held two roles on the club's <a href="http://warwickultimate.co.uk/exec/" target=_blank>exec</a>, first Treasurer and later Social Secretary. I love music and am always looking for someone to go to gigs with, let me know if you've got any spare tickets... especially for Biffy!</p>
@@ -512,47 +513,47 @@
         <h2>Tutoring</h2>
         <p>Tutoring</p>
       </div>
-      <p>I am an experienced and committed tutor of Maths, Computer Science and Programming. I teach all the way from 11+ and 13+ entrance exams to prep and secondary schools to A Level and even Degree Level (in the case of Computer Science and Programming).</p>
+      <p>I am an experienced and committed tutor of Maths, Computer Science and Programming with experience in the e-learning industry. I teach all the way from 11+ and 13+ entrance exams to prep and secondary schools to A Level and even Degree Level (in the case of Computer Science and Programming).</p>
       <p>In terms of programming languages I have degree level knowledge in Python, Java, C#, C, Haskell and SQL. Maths and Computer Science tutoring starts from £35 per hour with Programming starting from £40 per hour</p>
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk">Maths</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Maths</a></h4>
             <p>One to one tutoring from £35 an hour. Any age from KS1 - A Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk">Computer Science</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Computer Science</a></h4>
             <p>One to one tutoring from £35 an hour. Any age from GCSE - Degree Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk">Python Programing</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Python Programing</a></h4>
             <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <h4><a href="">Java Programing</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Java Programing</a></h4>
             <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk">Functional Programming</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Functional Programming</a></h4>
             <p>One to one tutoring from £40 an hour. Any age from A Level - Degree Level</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk">Object Oriented Programming</a></h4>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Object Oriented Programming</a></h4>
             <p>One to one tutoring from £40 an hour. Any age from A Level - Degree Level</p>
           </div>
         </div>
