--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Object Oriented Programming</a></h4>
-            <p>One to one tutoring from £40 an hour. Any age from A Level - Degree Level</p>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Software Engineering Interview Practice</a></h4>
+            <p>One to one interview practice from £40 an hour. Specialising in Graduate jobs and positions</p>
           </div>
         </div>
 
