changes to the CV page

--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@
             </div>
           </div>
 
+          <div class="progress">
+            <span class="skill">Compiler for Mini C written in C++ using a Recursive Descent Parser and LLVM<i class="val">77%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -389,7 +396,7 @@
             <p><em>Third Year Undegraduate at Warwick University and Incoming Software Development Engineer at Amazon</em></p>
             <p>
             <ul>
-              <li>Sheriff Avenue, Coventry</li>
+              <li>Coventry</li>
               <li>Joe.Moore@Warwick.ac.uk</li>
             </ul>
             </p>
@@ -420,6 +427,7 @@
               Neural Computing<br>
               Fault Tolerant Systems<br>
             </p>
+            <p>Dissertation title: "Hale: a web based tool to teach functional programming".<br> The project behind my dissertation is to design a back-end compiler and front-end teaching tool to teach 'Hale'. Hale is a custom purely functional, statically typed, programming language I have developed. it is most similar to Lambda Calculus but with the inclusion of primitives and types. My supervisor is Jonathon Foss.</p>
           </div>
           <div class="CV-item">
             <h4>A Levels</h4>
@@ -432,6 +440,20 @@
             <h5>2015 - 2017</h5>
             <p><em>Merchant Taylors' School</em></p>
             <p>9 A*s 1 A</p>
+          </div>
+          <h3 class="CV-title">Other</h3>
+          <div class="CV-item">
+          I am a keen ultimate frisbee player and
+          have been a member of Warwick Bears
+          since 2019. From 2020 to 2021 I was the
+          club’s treasurer, overseeing the finances
+          and drafting up and implementing a
+          yearly budget. Since then, I have been
+          the club’s social secretary, organising
+          and running weekly socials. As well as
+          being a friendly face at club events to
+          encourage recruitment and make
+          newcomers feel welcome.
           </div>
         </div>
         <div class="col-lg-6">
@@ -499,6 +521,20 @@
             </ul>
             </p>
           </div>
+          <div class="CV-item">
+            <h4>Tutoring</h4>
+            <h5>January 2021</h5>
+            <p><em>Online</em></p>
+            <p>
+            <ul>
+              <li>Improved my explanation and communication skills and allowed me to learn
+                new ways to explain or outline difficult concepts or processes to people who
+                struggle to understand them.</li>
+              <li>Developed the ability to tailor explanations to people’s personalities, raising
+                the grades of 5 students by at least 1 grade.</li>
+            </ul>
+            </p>
+          </div>
         </div>
       </div>
 
@@ -519,42 +555,42 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Maths</a></h4>
-            <p>One to one tutoring from £35 an hour. Any age from KS1 - A Level</p>
+            <p>One to one tutoring from £35 an hour. Any age from KS1 - A Level. I have had a strong academic track record in Maths, completing my Maths GCSE a year early and getting an A* at A Level. I also have a FSMQ additonal Maths qualification.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Computer Science</a></h4>
-            <p>One to one tutoring from £35 an hour. Any age from GCSE - Degree Level</p>
+            <p>One to one tutoring from £35 an hour. Any age from GCSE - Degree Level. My degree has given me a superb understanding in all fields of CS from low-level computer organisation and architecture to high level Object Orientated Programming.</Object></p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Python Programing</a></h4>
-            <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level</p>
+            <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level. I have a strong resume of Python projects, from AI and Machine Learning to <a href="https://github.com/joverandout/CS261-Software-Engineering">a meeting feedback system</a> designed for Deutsche Bank.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Java Programing</a></h4>
-            <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level</p>
+            <p>One to one tutoring from £40 an hour. Any age from GCSE - Degree Level. Java is the language I have used most during my degree and the one in which I am most comfortable. I reccomend Java for anyone starting out programming over Python since it is more suited to better programming practices.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Functional Programming</a></h4>
-            <p>One to one tutoring from £40 an hour. Any age from A Level - Degree Level</p>
+            <p>One to one tutoring from £40 an hour. Any age from A Level - Degree Level. Functional programming was the subject of my dissertation and the subject I am most passionate about. I have even designed and implemented my own Functional Programming language - Hale.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Software Engineering Interview Practice</a></h4>
-            <p>One to one interview practice from £40 an hour. Specialising in Graduate jobs and positions</p>
+            <h4><a href="mailto:joe.moore@warwick.ac.uk" target=_blank>Software Eng Interview Practice</a></h4>
+            <p>One to one interview practice from £40 an hour. Specialising in Software Graduate jobs. I have interviewed myself for TikTok, Amazon, Deutsche Bank and Apple among others. My interview success rate for grad jobs in 2021 was 50%.</p>
           </div>
         </div>
 
