--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
             </div>
           </div>
 
+          <div class="progress">
+            <span class="skill">Machine learning implementation of GMM & EM algorithm on iris dataset<i class="val">66%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -598,7 +605,10 @@
       </div>
 
     </div>
-  </section><!-- End Tutoring Section -->
+  </section>
+  
+  
+  <!-- End Tutoring Section -->
 <!-- 
   ======= Portfolio Section =======
   <section id="portfolio" class="portfolio">
